<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SampleActivity">

    <!--<Button-->
    <!--android:id="@+id/button1"-->
    <!--android:layout_width="250dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/button_text"-->
    <!--android:padding="12dp"-->
    <!--android:drawableLeft="@drawable/personlocation"-->
    <!--android:drawablePadding="4dp"-->
    <!--android:gravity="left|center_vertical"-->
    <!--android:fontFamily="sans-serif-light"/>-->
    <TextView
        android:id="@+id/locationdetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/locationinfo"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/locationdetails"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/longitude"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/locationdetails"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/longitude"
        android:hint="@string/longitudehint"
        android:paddingLeft="8dp"
        style="@style/MyTextViewStyle"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv1"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/latitude"
        style="@style/MyTextViewStyle"
        android:hint="@string/latitudehint"
        android:paddingLeft="8dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/latitude"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/address" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv2"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/longitude"
        style="@style/MyTextViewStyle"
        android:hint="@string/waitforaddress"
        android:paddingLeft="8dp" />


    <TextView
        android:id="@+id/tvlocationactions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginTop="4dp"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/location_action"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <Button
        android:id="@+id/mapbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvlocationactions"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center"
        android:text="@string/show_on_map" />

    <Button
        android:id="@+id/save_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mapbutton"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center"
        android:text="@string/save" />


</RelativeLayout>
