<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.suncha.shareloc.saveLocationDetails">

    <TextView
        android:id="@+id/locationdetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/title_save"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/locationdetails"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:text="@string/address"
        />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/locationdetails"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/title"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:textSize="16sp"
        android:hint="@string/street_address"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/title"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/description" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etAddress"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/description"
        android:height="40dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:paddingLeft="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/description"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/tvlatitude"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etDescription"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/latitude"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:paddingLeft="6dp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/latitude"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/tvlongitude"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tvlatitude"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/longitude"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:paddingLeft="8dp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitude"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/discardButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/discard" />

    </LinearLayout>


</RelativeLayout>
